# gsloc

./: .editorconfig  README.md  pyproject.toml
.github/workflows/: pypi.yml
gsloc/: cli.py  core.py
gsloc/protobuf/: location_pb2.py  location_pb2.pyi
