[tool.poetry]
name = "gsloc"
version = "0.1.1"
description = "A simple API for Apple's gs-loc service"
authors = ["Yibo Wei <david_wyb2001@outlook.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Microwave-WYB/gsloc"
repository = "https://github.com/Microwave-WYB/gsloc"


[tool.poetry.dependencies]
python = "^3.7"
protobuf = "^5.26.1"
requests = "^2.31.0"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gsloc = "gsloc.cli:main"
